Fixed spinner visibility

--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -69,8 +69,11 @@ img{
 }
 img.themeSpinner{
 	vertical-align: middle;
-	margin-left: 2px;
 	display: none;
+	margin-left: 10px;
+	width: 20px;
+	height: 20px;
+	margin-top: 35px
 }
 #save-button-block  .select-theme {
 	width:251px;
